<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background2"
    tools:context="com.dhillon.shippingcalculator.MyActivity">

    <!-- WEGHT INPUT SECTION-->
    <TextView
        android:text="@string/weightLBL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="13dp"
        android:textColor="#000000"
        android:id="@+id/textView" />

    <!-- WEIGHT INPUT EDITEXT-->
    <EditText
        android:id="@+id/EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        android:hint="@string/zero"
        android:textColor="#000000"/>

    <requestFocus/>

    <TextView
        android:text="@string/kgLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/baseCostLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="230dp"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView3"
        android:textColor="#000000"/>

    <TextView
        android:text="@string/zeroDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:id="@+id/textView4" />

    <TextView
        android:text="@string/zeroDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/totalCostLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />
    <TextView
        android:text="@string/zeroDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentRight="true"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:id="@+id/textView8" />

    <TextView
        android:text="@string/addCostLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />


</RelativeLayout>
